--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
+    "echarts": "^5.2.1",
     "element-ui": "^2.4.5",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
+    "vue-echarts": "^6.0.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vue-table-with-tree-grid": "^0.2.4"
