--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.2.1",
     "element-ui": "^2.4.5",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-echarts": "^6.0.0",
     "vue-quill-editor": "^3.0.6",
